--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,8 @@
-# nginx/nginx.conf - Updated with Redis proxy support
+# nginx/nginx.conf - With redis2 module support
 
-# Load njs module
+# Load modules
 load_module modules/ngx_http_js_module.so;
+load_module modules/ngx_http_redis2_module.so;
 
 user nginx;
 worker_processes auto;
@@ -23,6 +24,7 @@ http {
     js_import auth from /etc/nginx/njs/auth.js;
     js_import database from /etc/nginx/njs/database.js;
     js_import utils from /etc/nginx/njs/utils.js;
+    js_import init from /etc/nginx/njs/init.js;
 
     # Set variables for configuration
     js_set $admin_username auth.getAdminUsername;
@@ -57,25 +59,14 @@ http {
     }
     
     upstream redis_backend {
-        server redis:8001;
+        server redis:6379;
+        keepalive 32;
     }
 
     # Internal auth subrequest using njs
     location = /auth {
         internal;
         js_content auth.verifyToken;
-    }
-
-    # Internal Redis proxy
-    location = /redis-proxy-internal {
-        internal;
-        proxy_pass http://redis_backend/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_timeout 30s;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
     }
 
     server {
@@ -130,26 +121,122 @@ http {
             js_content auth.verifyTokenEndpoint;
         }
 
+        # System initialization endpoint
+        location /api/init {
+            js_content init.handleInitEndpoint;
+        }
+
         # Health check
         location /health {
             js_content utils.healthCheck;
         }
 
         # =====================================================
-        # REDIS HTTP PROXY (Protected)
+        # INTERNAL REDIS ENDPOINTS (for njs)
         # =====================================================
         
-        location /api/redis-cmd {
-            limit_req zone=api_limit burst=30 nodelay;
-            
-            # Require authentication
-            auth_request /auth;
-            auth_request_set $user_id $upstream_http_x_user_id;
-            auth_request_set $username $upstream_http_x_username;
-            auth_request_set $is_admin $upstream_http_x_is_admin;
-            
-            # Add user context and security via njs
-            js_content database.handleRedisProxy;
+        # Redis GET operation
+        location ~ ^/redis-internal/get/(.+)$ {
+            internal;
+            redis2_query get $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis SET operation
+        location ~ ^/redis-internal/set/([^/]+)/(.*)$ {
+            internal;
+            redis2_query set $1 $2;
+            redis2_pass redis_backend;
+        }
+
+        # Redis SETEX operation  
+        location ~ ^/redis-internal/setex/([^/]+)/([^/]+)/(.*)$ {
+            internal;
+            redis2_query setex $1 $2 $3;
+            redis2_pass redis_backend;
+        }
+
+        # Redis HGET operation
+        location ~ ^/redis-internal/hget/([^/]+)/(.+)$ {
+            internal;
+            redis2_query hget $1 $2;
+            redis2_pass redis_backend;
+        }
+
+        # Redis HSET operation
+        location ~ ^/redis-internal/hset/([^/]+)/([^/]+)/(.*)$ {
+            internal;
+            redis2_query hset $1 $2 $3;
+            redis2_pass redis_backend;
+        }
+
+        # Redis HGETALL operation
+        location ~ ^/redis-internal/hgetall/(.+)$ {
+            internal;
+            redis2_query hgetall $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis SMEMBERS operation
+        location ~ ^/redis-internal/smembers/(.+)$ {
+            internal;
+            redis2_query smembers $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis SADD operation
+        location ~ ^/redis-internal/sadd/([^/]+)/(.+)$ {
+            internal;
+            redis2_query sadd $1 $2;
+            redis2_pass redis_backend;
+        }
+
+        # Redis SREM operation
+        location ~ ^/redis-internal/srem/([^/]+)/(.+)$ {
+            internal;
+            redis2_query srem $1 $2;
+            redis2_pass redis_backend;
+        }
+
+        # Redis INCR operation
+        location ~ ^/redis-internal/incr/(.+)$ {
+            internal;
+            redis2_query incr $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis EXISTS operation
+        location ~ ^/redis-internal/exists/(.+)$ {
+            internal;
+            redis2_query exists $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis DEL operation
+        location ~ ^/redis-internal/del/(.+)$ {
+            internal;
+            redis2_query del $1;
+            redis2_pass redis_backend;
+        }
+
+        # Redis PING operation
+        location /redis-internal/ping {
+            internal;
+            redis2_query ping;
+            redis2_pass redis_backend;
+        }
+
+        # Redis FLUSHDB operation (dangerous!)
+        location /redis-internal/flushdb {
+            internal;
+            redis2_query flushdb;
+            redis2_pass redis_backend;
+        }
+
+        # Generic Redis command endpoint for complex operations
+        location /redis-internal/command {
+            internal;
+            js_content database.handleRedisCommand;
         }
 
         # =====================================================
