--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,12 +63,6 @@ http {
         keepalive 32;
     }
 
-    # Internal auth subrequest using njs
-    location = /auth {
-        internal;
-        js_content auth.verifyToken;
-    }
-
     server {
         listen 80 default_server;
         server_name localhost ai.junder.uk _;
@@ -83,52 +77,12 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         # =====================================================
-        # STATIC FILES (Public)
+        # INTERNAL AUTH SUBREQUEST
         # =====================================================
         
-        location / {
-            try_files $uri $uri/ /index.html;
-            expires 1h;
-            add_header Cache-Control "public, max-age=3600";
-        }
-        
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
-        }
-
-        # Public pages (no auth required)
-        location ~* ^/(login|register|$) {
-            try_files $uri $uri/ /index.html;
-        }
-
-        # =====================================================
-        # NJS API ENDPOINTS
-        # =====================================================
-        
-        # Public auth endpoints
-        location /api/auth/login {
-            limit_req zone=auth_limit burst=5 nodelay;
-            js_content auth.handleLogin;
-        }
-
-        location /api/auth/register {
-            limit_req zone=auth_limit burst=5 nodelay;
-            js_content auth.handleRegister;
-        }
-
-        location /api/auth/verify {
-            js_content auth.verifyTokenEndpoint;
-        }
-
-        # System initialization endpoint
-        location /api/init {
-            js_content init.handleInitEndpoint;
-        }
-
-        # Health check
-        location /health {
-            js_content utils.healthCheck;
+        location = /auth {
+            internal;
+            js_content auth.verifyToken;
         }
 
         # =====================================================
@@ -237,6 +191,187 @@ http {
         location /redis-internal/command {
             internal;
             js_content database.handleRedisCommand;
+        }
+
+        # =====================================================
+        # STATIC FILES (Public)
+        # =====================================================
+        
+        location / {
+            try_files $uri $uri/ /index.html;
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+        }
+        
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000";
+        }
+
+        # Public pages (no auth required)
+        location ~* ^/(login|register|$) {
+            try_files $uri $uri/ /index.html;
+        }
+
+        # =====================================================
+        # NJS API ENDPOINTS
+        # =====================================================
+        
+        # Public auth endpoints
+        location /api/auth/login {
+            limit_req zone=auth_limit burst=5 nodelay;
+            js_content auth.handleLogin;
+        }
+
+        location /api/auth/register {
+            limit_req zone=auth_limit burst=5 nodelay;
+            js_content auth.handleRegister;
+        }
+
+        location /api/auth/verify {
+            js_content auth.verifyTokenEndpoint;
+        }
+
+        # System initialization endpoint
+        location /api/init {
+            js_content init.handleInitEndpoint;
+        }
+
+        # Health check
+        location /health {
+            js_content utils.healthCheck;
+        }
+
+        # =====================================================
+        # PROTECTED API ENDPOINTS
+        # =====================================================
+        
+        location /api/ {
+            limit_req zone=api_limit burst=20 nodelay;
+            
+            # Require authentication for all other API calls
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
+            auth_request_set $username $upstream_http_x_username;
+            auth_request_set $is_admin $upstream_http_x_is_admin;
+            
+            # Route to appropriate handlers
+            location /api/admin/ {
+                if ($is_admin != "true") {
+                    return 403;
+                }
+                js_content auth.handleAdminRequest;
+            }
+            
+            location /api/chat/ {
+                js_content database.handleChatRequest;
+            }
+            
+            location /api/database/ {
+                js_content database.handleDatabaseRequest;
+            }
+        }
+
+        # =====================================================
+        # PROTECTED STATIC PAGES
+        # =====================================================
+        
+        location ~* ^/(chat|admin|user-detail) {
+            auth_request /auth;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # =====================================================
+        # OLLAMA PROXY (Protected)
+        # =====================================================
+        
+        location /api/ollama/ {
+            limit_req zone=ollama_limit burst=20 nodelay;
+            
+            auth_request /auth;
+            auth_request_set $user_id $upstream_http_x_user_id;
+            
+            rewrite ^/api/ollama/(.*)$ /$1 break;
+            proxy_pass http://ollama_backend;
+            proxy_set_header X-User-ID $user_id;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # Streaming support
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_timeout 300s;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+        }
+
+        # =====================================================
+        # ERROR PAGES
+        # =====================================================
+        
+        error_page 401 403 /unauthorized.html;
+        error_page 429 /rate_limited.html;
+        error_page 502 503 504 /50x.html;
+        error_page 404 /404.html;
+        
+        location = /unauthorized.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        location = /rate_limited.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        location = /404.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+    }
+}|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000";
+        }
+
+        # Public pages (no auth required)
+        location ~* ^/(login|register|$) {
+            try_files $uri $uri/ /index.html;
+        }
+
+        # =====================================================
+        # NJS API ENDPOINTS
+        # =====================================================
+        
+        # Public auth endpoints
+        location /api/auth/login {
+            limit_req zone=auth_limit burst=5 nodelay;
+            js_content auth.handleLogin;
+        }
+
+        location /api/auth/register {
+            limit_req zone=auth_limit burst=5 nodelay;
+            js_content auth.handleRegister;
+        }
+
+        location /api/auth/verify {
+            js_content auth.verifyTokenEndpoint;
+        }
+
+        # System initialization endpoint
+        location /api/init {
+            js_content init.handleInitEndpoint;
+        }
+
+        # Health check
+        location /health {
+            js_content utils.healthCheck;
         }
 
         # =====================================================
