--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - With redis2 module support - FIXED
+# nginx/nginx.conf - Fixed configuration
 
 # Load modules
 load_module modules/ngx_http_js_module.so;
@@ -46,7 +46,7 @@ http {
     server_tokens off;
     client_max_body_size 10M;
     
-    # Proxy timeout settings (FIXED - moved to http block)
+    # Proxy timeout settings
     proxy_connect_timeout 300s;
     proxy_send_timeout 300s;
     proxy_read_timeout 300s;
@@ -73,7 +73,7 @@ http {
 
     server {
         listen 80 default_server;
-        server_name localhost ai.junder.uk _;
+        server_name localhost ai.junder.uk;
         
         root /usr/share/nginx/html;
         index index.html;
@@ -202,27 +202,32 @@ http {
         }
 
         # =====================================================
-        # STATIC FILES (Public)
+        # STATIC FILES AND MAIN ROUTES
         # =====================================================
         
-        location / {
-            try_files $uri $uri/ /index.html;
-            expires 1h;
-            add_header Cache-Control "public, max-age=3600";
-        }
-        
+        # Static assets (CSS, JS, images)
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
+            try_files $uri =404;
         }
 
-        # Public pages (no auth required)
-        location ~* ^/(login|register|$) {
-            try_files $uri $uri/ /index.html;
+        # JavaScript library files
+        location /js/lib/ {
+            expires 30d;
+            add_header Cache-Control "public, max-age=2592000";
+            try_files $uri =404;
+        }
+
+        # CSS files
+        location /css/ {
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+            try_files $uri =404;
         }
 
         # =====================================================
-        # NJS API ENDPOINTS
+        # PUBLIC API ENDPOINTS (No Auth Required)
         # =====================================================
         
         # Public auth endpoints
@@ -254,43 +259,35 @@ http {
         # PROTECTED API ENDPOINTS
         # =====================================================
         
-        location /api/ {
+        location ~ ^/api/(admin|chat|database)/ {
             limit_req zone=api_limit burst=20 nodelay;
             
-            # Require authentication for all other API calls
+            # Require authentication for protected API calls
             auth_request /auth;
             auth_request_set $user_id $upstream_http_x_user_id;
             auth_request_set $username $upstream_http_x_username;
             auth_request_set $is_admin $upstream_http_x_is_admin;
             
-            # Route to appropriate handlers
-            location /api/admin/ {
+            # Route to appropriate handlers based on the first path segment
+            location ~ ^/api/admin/ {
+                # Admin endpoints require admin privileges
                 if ($is_admin != "true") {
                     return 403;
                 }
                 js_content auth.handleAdminRequest;
             }
             
-            location /api/chat/ {
+            location ~ ^/api/chat/ {
                 js_content database.handleChatRequest;
             }
             
-            location /api/database/ {
+            location ~ ^/api/database/ {
                 js_content database.handleDatabaseRequest;
             }
         }
 
         # =====================================================
-        # PROTECTED STATIC PAGES
-        # =====================================================
-        
-        location ~* ^/(chat|admin|user-detail) {
-            auth_request /auth;
-            try_files $uri $uri/ /index.html;
-        }
-
-        # =====================================================
-        # OLLAMA PROXY (Protected) - FIXED proxy directives
+        # OLLAMA PROXY (Protected)
         # =====================================================
         
         location /api/ollama/ {
@@ -306,11 +303,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             
-            # Streaming support - FIXED: use correct directive names
+            # Streaming support
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             
-            # Individual timeout settings instead of proxy_timeout
+            # Individual timeout settings
             proxy_connect_timeout 300s;
             proxy_send_timeout 300s;
             proxy_read_timeout 300s;
@@ -322,6 +319,76 @@ http {
         }
 
         # =====================================================
+        # PUBLIC PAGES (No Auth Required)
+        # =====================================================
+        
+        # Root/index page
+        location = / {
+            try_files /index.html =404;
+        }
+
+        # Login page
+        location = /login {
+            try_files /login.html =404;
+        }
+
+        # Register page  
+        location = /register {
+            try_files /register.html =404;
+        }
+
+        # Error pages (public)
+        location = /404.html {
+            internal;
+        }
+        
+        location = /50x.html {
+            internal;
+        }
+        
+        location = /unauthorized.html {
+            internal;
+        }
+        
+        location = /rate_limited.html {
+            internal;
+        }
+
+        # =====================================================
+        # PROTECTED PAGES (Auth Required)
+        # =====================================================
+        
+        # Chat page
+        location = /chat {
+            auth_request /auth;
+            try_files /chat.html =404;
+        }
+
+        # Admin page
+        location = /admin {
+            auth_request /auth;
+            auth_request_set $is_admin $upstream_http_x_is_admin;
+            
+            if ($is_admin != "true") {
+                return 403;
+            }
+            
+            try_files /admin.html =404;
+        }
+
+        # User detail page
+        location = /user-detail {
+            auth_request /auth;
+            auth_request_set $is_admin $upstream_http_x_is_admin;
+            
+            if ($is_admin != "true") {
+                return 403;
+            }
+            
+            try_files /user-detail.html =404;
+        }
+
+        # =====================================================
         # ERROR PAGES
         # =====================================================
         
@@ -329,25 +396,20 @@ http {
         error_page 429 /rate_limited.html;
         error_page 502 503 504 /50x.html;
         error_page 404 /404.html;
+
+        # =====================================================
+        # FALLBACK FOR ANY OTHER REQUESTS
+        # =====================================================
         
-        location = /unauthorized.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
-        
-        location = /rate_limited.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
-        
-        location = /50x.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
-        
-        location = /404.html {
-            root /usr/share/nginx/html;
-            internal;
+        # Handle any other requests that don't match above patterns
+        location / {
+            # For requests that look like they should be files, return 404
+            if ($uri ~* \.(html|htm|php|asp|jsp)$) {
+                return 404;
+            }
+            
+            # For other requests, try to serve the file or return 404
+            try_files $uri $uri/ =404;
         }
     }
 }
