--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,4 @@
-# nginx/Dockerfile - Using pre-built packages where possible
+# nginx/Dockerfile - Fixed paths and setup
 
 FROM nginx:alpine
 
@@ -52,8 +52,9 @@ RUN mkdir -p /etc/nginx/njs && \
     curl -o /usr/share/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js && \
     curl -o /usr/share/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
 
-# Copy your files
+# Copy your files - FIXED PATHS
 COPY njs/ /etc/nginx/njs/
+COPY html/ /usr/share/nginx/html/
 COPY static/ /usr/share/nginx/html/
 
 # Set permissions
