--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Fixed configuration
+# nginx/nginx.conf - Fixed configuration with proper POST handling
 
 # Load modules
 load_module modules/ngx_http_js_module.so;
@@ -45,6 +45,10 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
     client_max_body_size 10M;
+    
+    # Important: Enable client body buffering for POST requests
+    client_body_buffer_size 16k;
+    client_body_in_file_only off;
     
     # Proxy timeout settings
     proxy_connect_timeout 300s;
@@ -230,14 +234,26 @@ http {
         # PUBLIC API ENDPOINTS (No Auth Required)
         # =====================================================
         
-        # Public auth endpoints
+        # Public auth endpoints - IMPORTANT: Enable body reading for POST
         location /api/auth/login {
             limit_req zone=auth_limit burst=5 nodelay;
+            
+            # Enable request body reading for POST requests
+            client_body_in_file_only off;
+            client_body_buffer_size 16k;
+            client_max_body_size 1M;
+            
             js_content auth.handleLogin;
         }
 
         location /api/auth/register {
             limit_req zone=auth_limit burst=5 nodelay;
+            
+            # Enable request body reading for POST requests
+            client_body_in_file_only off;
+            client_body_buffer_size 16k;
+            client_max_body_size 1M;
+            
             js_content auth.handleRegister;
         }
 
