--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,14 +3,11 @@ load_module modules/ngx_http_redis2_module.so;
 
 user nginx;
 worker_processes auto;
-worker_rlimit_nofile 65536;
-pid /var/run/nginx.pid;
 error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections 8192;
-    use epoll;
-    multi_accept on;
+    worker_connections 1024;
 }
 
 http {
@@ -23,67 +20,25 @@ http {
     js_import init from /etc/nginx/njs/init.js;
     js_import admin from /etc/nginx/njs/admin.js;
     js_import models from /etc/nginx/njs/models.js;
-
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for" rt=$request_time';
-
-    access_log /var/log/nginx/access.log main;
-
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    server_tokens off;
-    client_max_body_size 10M;
-    client_body_buffer_size 16k;
-    client_body_in_file_only off;
-
-    proxy_connect_timeout 300s;
-    proxy_send_timeout 300s;
-    proxy_read_timeout 300s;
-    proxy_buffering off;
-    proxy_cache off;
-
-    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=100r/m;
-    limit_req_zone $binary_remote_addr zone=ollama_limit:10m rate=50r/m;
-    limit_req_status 429;
-
-    upstream ollama_backend { server ollama:11434; keepalive 32; }
-    upstream redis_backend { server redis:6379; keepalive 32; }
+    js_import chat from /etc/nginx/njs/chat.js;
 
     server {
-        listen 80 default_server;
-        server_name localhost ai.junder.uk;
+        listen 80;
+        server_name localhost;
 
         root /usr/share/nginx/html;
         index index.html;
 
-        add_header X-Frame-Options DENY always;
-        add_header X-Content-Type-Options nosniff always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
         location = /auth {
             internal;
-            js_content auth.verifyToken;
+            js_content auth.verifyTokenEndpoint;
         }
 
         location /api/auth/login {
-            limit_req zone=auth_limit burst=5 nodelay;
-            client_body_in_file_only off;
-            client_body_buffer_size 16k;
-            client_max_body_size 1M;
             js_content auth.handleLogin;
         }
 
         location /api/auth/register {
-            limit_req zone=auth_limit burst=5 nodelay;
-            client_body_in_file_only off;
-            client_body_buffer_size 16k;
-            client_max_body_size 1M;
             js_content auth.handleRegister;
         }
 
@@ -99,70 +54,19 @@ http {
             js_content utils.healthCheck;
         }
 
-        location ~ ^/api/(admin|chat|database)/ {
-            limit_req zone=api_limit burst=20 nodelay;
-            auth_request /auth;
-            auth_request_set $user_id $upstream_http_x_user_id;
-            auth_request_set $username $upstream_http_x_username;
-            auth_request_set $is_admin $upstream_http_x_is_admin;
-
-            location ~ ^/api/admin/ {
-                if ($is_admin != "true") { return 403; }
-                js_content admin.handleAdminRequest;
-            }
-
-            location ~ ^/api/chat/ {
-                js_content database.handleChatRequest;
-            }
-
-            location ~ ^/api/database/ {
-                js_content database.handleDatabaseRequest;
-            }
+        location ~ ^/api/admin/ {
+            js_content admin.handleAdminRequest;
         }
 
-        location /api/ollama/ {
-            limit_req zone=ollama_limit burst=20 nodelay;
-            auth_request /auth;
-            auth_request_set $user_id $upstream_http_x_user_id;
-
-            rewrite ^/api/ollama/(.*)$ /$1 break;
-            proxy_pass http://ollama_backend;
-            proxy_set_header X-User-ID $user_id;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
+        location ~ ^/api/chat/ {
+            js_content chat.handleChatRequest;
         }
 
-        location = / { try_files /index.html =404; }
-        location = /login { try_files /login.html =404; }
-        location = /register { try_files /register.html =404; }
-        location = /chat { auth_request /auth; try_files /chat.html =404; }
-        location = /admin {
-            auth_request /auth;
-            auth_request_set $is_admin $upstream_http_x_is_admin;
-            if ($is_admin != "true") { return 403; }
-            try_files /admin.html =404;
-        }
-        location = /user-detail {
-            auth_request /auth;
-            auth_request_set $is_admin $upstream_http_x_is_admin;
-            if ($is_admin != "true") { return 403; }
-            try_files /user-detail.html =404;
+        location ~ ^/api/database/ {
+            js_content database.handleDatabaseRequest;
         }
 
-        error_page 401 403 /unauthorized.html;
-        error_page 429 /rate_limited.html;
-        error_page 502 503 504 /50x.html;
         error_page 404 /404.html;
-
-        location / {
-            if ($uri ~* \.(html|htm|php|asp|jsp)$) { return 404; }
-            try_files $uri $uri/ =404;
-        }
+        error_page 500 502 503 504 /50x.html;
     }
 }
