--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,13 +14,19 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Import NJS modules
     js_import auth from /etc/nginx/njs/auth.js;
     js_import database from /etc/nginx/njs/database.js;
     js_import utils from /etc/nginx/njs/utils.js;
-    js_import init from /etc/nginx/njs/init.js;
     js_import admin from /etc/nginx/njs/admin.js;
     js_import models from /etc/nginx/njs/models.js;
     js_import chat from /etc/nginx/njs/chat.js;
+
+    # Redis upstream
+    upstream redis_backend {
+        server redis:6379;
+        keepalive 10;
+    }
 
     server {
         listen 80;
@@ -29,11 +35,20 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        # Internal Redis proxy for NJS modules
+        location ~ ^/redis-internal/(.+) {
+            internal;
+            redis2_query $1;
+            redis2_pass redis_backend;
+        }
+
+        # Authentication endpoint
         location = /auth {
             internal;
             js_content auth.verifyTokenEndpoint;
         }
 
+        # API endpoints
         location /api/auth/login {
             js_content auth.handleLogin;
         }
@@ -46,12 +61,13 @@ http {
             js_content auth.verifyTokenEndpoint;
         }
 
-        location /api/init {
-            js_content init.handleInitEndpoint;
-        }
-
         location /health {
             js_content utils.healthCheck;
+        }
+
+        # Initialization endpoint - runs once at startup
+        location /api/init {
+            js_content utils.handleInit;
         }
 
         location ~ ^/api/admin/ {
@@ -66,7 +82,21 @@ http {
             js_content database.handleDatabaseRequest;
         }
 
+        # Static files
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        # Error pages
         error_page 404 /404.html;
         error_page 500 502 503 504 /50x.html;
+        error_page 403 /unauthorised.html;
+        error_page 429 /rate_limit.html;
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     }
 }
