--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,12 +42,6 @@ http {
             redis2_pass redis_backend;
         }
 
-        # Authentication endpoint
-        location = /auth {
-            internal;
-            js_content auth.verifyTokenEndpoint;
-        }
-
         # API endpoints
         location /api/auth/login {
             js_content auth.handleLogin;
@@ -61,11 +55,6 @@ http {
             js_content auth.verifyTokenEndpoint;
         }
 
-        location /health {
-            js_content utils.healthCheck;
-        }
-
-        # Initialization endpoint - runs once at startup
         location /api/init {
             js_content utils.handleInit;
         }
@@ -82,7 +71,44 @@ http {
             js_content database.handleDatabaseRequest;
         }
 
-        # Static files
+        location /health {
+            js_content utils.healthCheck;
+        }
+
+        # Static HTML page pretty routes
+        location = / {
+            try_files /index.html =404;
+        }
+
+        location = /login {
+            try_files /login.html =404;
+        }
+
+        location = /register {
+            try_files /register.html =404;
+        }
+
+        location = /chat {
+            try_files /chat.html =404;
+        }
+
+        location = /admin {
+            try_files /admin.html =404;
+        }
+
+        location = /user-detail {
+            try_files /user-detail.html =404;
+        }
+
+        location = /unauthorised {
+            try_files /unauthorised.html =404;
+        }
+
+        location = /rate_limit {
+            try_files /rate_limit.html =404;
+        }
+
+        # Generic static fallback
         location / {
             try_files $uri $uri/ =404;
         }
